--- a/catalog.html
+++ b/catalog.html
@@ -7,6 +7,42 @@
     <title>Document</title>
 </head>
 <body>
+    <header class="page-header">
+        <nav class="main-nav">
+            <div class="main-nav__wrapper">
+                <a href="#">cat-energy</a>
+                <button class="main-nav__toggler">menu</button>
+                <ul class="main-nav__list">
+                    <li class="main-nav__item"><a href=""></a></li>
+                    <li class="main-nav__item"><a href=""></a></li>
+                    <li class="main-nav__item"><a href=""></a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <section class="promo">
+            <div class="promo-wrapper">
+                <h1 class="promo__title">Каталог продукции</h1>
+            </div>
+        </section>
+        <section class="catalog">
+            <h2 class="catalog__title">Основные товары</h2>
+            <article class="catalog__item">
+                <div class="catalog__image">
+                    <img src="" alt="">
+                </div>
+                <div class="catalog__desc">
+                     <h3>cat energy pro 500 Г</h3>
+                     <ul class="catalog__spec">
+                         <li class="catalog__spec-row"><span>Объем</span><span>500 г</span></li>
+                         <li class="catalog__spec-row"><span>Вкус</span><span>Курица</span></li>
+                         <li class="catalog__spec-row"><span>Цена</span><span>700 Р.</span></li>
+                     </ul>
+                </div>
+            </article>
+        </section>
+    </main>
     
 </body>
 </html>
