--- a/index.html
+++ b/index.html
@@ -20,7 +20,93 @@
             </div>
         </nav>
     </header>
-    <main></main>
-    <footer class="page-footer"></footer>
+    <main>
+        <section class="program">
+            <div class="program__wrapper">
+                <button class="program__button">Подобрать программу</button>
+            </div>
+        </section>
+        <section class="slim">
+            <div class="slim__wrapper">
+                <div class="slim__header">
+                    <img src="" alt="">
+                    <h1>Похудение</h1>
+                </div>
+                <span class="slim__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</span>
+                <div class="slim__catalog">
+                    <span>Каталог slim</span>
+                    <a href="#"></a>
+                </div>
+            </div>
+        </section>
+        <section class="grow">
+            <div class="grow__wrapper">
+                <div class="grow__header">
+                    <img src="" alt="">
+                    <h1>Набор массы</h1>
+                </div>
+                <span class="grow__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</span>
+                <div class="grow__catalog">
+                    <span>Каталог Pro</span>
+                    <a href="#"></a>
+                </div>
+            </div>
+        </section>
+        <section class="working">
+            <div class="working__wrapper">
+                <h1>Как это работает</h1>
+                <ul class="working_list">
+                    <li class="working__item"><img src="" alt=""><span>Функциональное питание содержит только полезные питательные вещества.</span></li>
+                    <li class="working__item"><img src="" alt=""><span>Выпускается в виде порошка, который нужно залить кипятком и готова.</span></li>
+                    <li class="working__item"><img src="" alt=""><span>Замените один-два приема обычной еды на наше функциональное питание.</span></li>
+                    <li class="working__item"><img src="" alt=""><span>Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</span></li>
+                </ul>
+            </div>
+        </section>
+        <section class="example">
+            <div class="example__wrapper">
+                <h1>Живой пример</h1>
+                <span class="example__description">Борис сбросил 5кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</span>
+                <div class="example__weight">
+                    <h1>5 КГ</h1>
+                    <span>снижение веса</span>
+                </div>
+                <div class="example__days">
+                    <h1>60 дней</h1>
+                    <span>затрачено времени</span>
+                </div>
+                <span class="example__value">затраты на питание: 15 000 руб.</span>
+                <img src="" alt="">
+                <div class="example__changes">
+                    <img src="" alt="">
+
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="page-footer">
+        <div class="page-footer__partner">
+            <h2>приглашаем к сотрудничеству дилеров!</h2>
+            <span>ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</span>
+        </div>
+        <div class="page-footer__map">
+
+        </div>
+        <div class="page-footer__cat">
+            <span class="page-footer__span--bold">cat</span>
+            <span class="page-footer__span">energy</span>
+        </div>
+        <div>
+            <ul class="page-footer__social">
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+        <div>
+            <span class="page-footer__htmlacademy">HTML Academy</span>
+            <a href="" class="page-footer__logo"></a>
+        </div>
+    </footer>
 </body>
 </html>
