--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.min.css">
     <title>Document</title>
 </head>
 <body>
+    <svg style="display:none;" xmlns="http://www.w3.org/2000/svg"><symbol id="icon-cat-pro" viewBox="0 0 134 56"><path d="M123.1 5.8c1.2-1.9 2.7-3.4 4.5-4.6 1-.7 1.6-.7 2.2.6.8 1.9 1.5 3.9.9 6-.2.8-.1 1.4.4 2.1.6.8 1.1 1.6 1.6 2.3 1.3 1.9 1.8 3.9.9 6.2-.4 1-.4 2-.2 3.1.2 1 .2 2 0 3-.3 1.6-1.1 2.7-2.7 3.2-1.3.3-2.4.9-3.2 2-.2.3-.5.5-.9.5-1.2.2-4.2-2.5-4.2-3.7v-.6c.1-3.6-.1-3.9-3.4-5.4-.7-.3-1.3-.6-1.8-1.2-.6-.8-1.4-.7-2.3-.4-.8.4-1.4.9-1.3 1.9.3 2.4.4 4.8.3 7.3 0 .3.1.6.2.8 3.1 4.5 4.3 9.8 5.8 14.9 1.2 3.9 3.4 6 7.4 6.3.6 0 1.3.2 1.9.3 1.8.3 2.9 1.5 3.4 3.2.7 2.1.3 2.6-1.8 2.6h-6.5c-.9 0-1.6-.2-2.3-.8-1-1-2.2-1.4-3.4-2-1.3-.6-2.6-1.3-3.4-2.6-1.1-1.7-2.6-3.1-4-4.5-2.8-2.9-5.8-5.7-8.4-8.7-1.9-2.2-3.2-4.6-3.2-7.6 0-.9-.2-1.3-1.2-.9-.3.2-.7.3-1 .3-2.8 0-4.2 1.7-5.2 4.2-.9 2.1-2.1 4.1-3.2 6.2-.5 1.1-1 2.6-1 4.2 0 2.4.6 3.2 2.8 4 1.4.5 2.7 1 3.4 2.4.8 1.6.6 2-1.1 2.1h-6.8c-.9 0-1.5-.3-1.9-1.1l-1.8-3c-1-1.7-1.4-3.4-.7-5.4.6-1.7.3-3.6.1-5.3-.4-2.6 0-4.9 1.7-7 .6-.7.6-1-.4-1.2-4.1-.8-8-2.3-11.8-4.1 0 0-.1 0-.1-.1-3.2-1.2-3.8-1-4.7 2.3-.8 2.8-1.6 5.6-2.2 8.5-.7 3.2.1 6.2 1.1 9.2.4 1.2 1.6 1.1 2.5 1.4 2 .6 3.7 1.4 4.5 3.5.7 1.6.6 1.8-1.1 1.8-1.7 0-3.4-.1-5.2 0-1.6.1-2.8-.5-4.2-1.4-4.8-3.2-6.2-8.1-6.6-13.4-.2-3.3-2-5.9-4.1-8.4-.4-.5-.8-.7-1.4-.3-2.1 1.3-4.5 2.1-6.7 3-4.8 1.8-9 4.6-12.2 8.8-1.2 1.5-1.9 3.2-2.2 5.1-.3 1.8.2 2.6 2 3.1 1.9.6 2.7 1.5 2.9 3.4.1.8-.2 1.2-1 1.2h-8.1c-.6 0-1-.4-1.3-.8-1.3-1.6-1.9-3.5-1.9-5.5-.1-3.5.3-6.9.9-10.3.4-2.1 1.4-3.8 3.4-4.8 5.9-2.8 9-8.1 11.8-13.6.6-1.1.1-1.3-.9-1.2-2.9.3-5.4 1.6-7.7 3.2-3 2.1-5.7 4.6-8.3 7.1-2.9 2.7-6.2 4.6-10.3 4.9C3.1 32.5-.3 28.4 0 21.8c.1-2.3.9-4.4 2.4-6.1 1.2-1.3 2.6-2 4.5-1.5 1.5.4 1.9 1.2 1.3 2.7-.3.6-.7 1.1-1 1.7-.4.6-.8 1.3-1 2-1.1 3 .4 5.1 3.5 5.4 3.3.3 6-1.1 8.5-3.1 3-2.4 5.7-5.2 8-8.3 3.7-4.8 8.5-7.3 14.4-8.1 2.3-.3 4.3-1.3 6.5-1.9 4.1-1.2 8.3-1.9 12.7-1.8 2 .1 3.9-.3 5.8-1.1 4.9-2 10-2 15.1-1 4 .8 8 1.8 11.9 2.8 2.2.5 4.7.3 7-.2 4.4-1 8.9-1.9 13.4-2 3-.1 5.9.4 8.6 1.7 2 .9 2 .9 1.5 2.8z"/></symbol><symbol id="icon-cat-slim" viewBox="0 0 70 97"><path d="M54.8 0h-.4c-.7.4-1.1.9-1.4 1.6-.6 1.1-1 2.3-1.3 3.4-.2.8-.7 1.2-1.5 1.3-2.3.4-4 1.7-5.2 3.7-.7 1.3-1.3 2.6-1.8 3.9-1.4 3.7-2.5 7.5-3.8 11.2-.7 1.9-.8 1.9-2.7 1.9-2.3 0-2.1-.4-2.1 2.1 0 .8.2 1.2 1.1 1.2.3 0 .7-.1.8.2.1.3-.2.5-.4.7-1.2 1.3-2.7 2-4.3 2.4-1.9.5-3.8.9-5.7 1.5-4.7 1.6-9.1 3.8-12.6 7.6-2.1 2.3-3.5 5-4.7 7.8-3.8 8.7-5.6 17.8-7 27-.6 4.3-1.1 8.6-1.5 13C.2 92.7 0 94.8 0 97h33.3c.1-.5-.1-.9-.2-1.3-.7-1.8-2.1-2.7-3.8-3.1-.7-.2-.8-.4-.4-.9.7-.9 1.2-2 1.6-3.1 1.6-4.8 2.3-9.8 3.1-14.8.6-3.8 1.5-7.4 3.4-10.8 1.5-2.5 3.3-4.6 5.6-6.4.8-.6.9-.6 1 .4.1.7.1 1.4.2 2.2.3 4.7.3 9.5-.2 14.2-.3 3.7-.5 7.4-.2 11 .4 4.3 1.2 8.4 2.2 12.6h13.3c-.3-2.2-2.1-4-4.2-4.4-1.3-.2-2.5-.1-3.8.2-.6.1-.8 0-.9-.6-.4-5.3-.1-10.6 1-15.8 1.3-6 2.4-12.1 3.1-18.2.3-2.5 1-4.8 2.3-7 1.2-2.1 2.2-4.3 3.4-6.5.9-1.7 1.1-3.4.4-5.2-.3-.7-.5-1.4-.9-2.1-1-2-2-3.9-2.9-5.9-.5-1-.4-1.1.7-1.1 1.6 0 1.6 0 1.7-1.6v-.7c0-.7-.3-1.1-1-1h-1.5c-.7 0-.9-.3-.7-1 .6-2.3 2.8-4.1 5.1-4.4 2.2-.3 4.4 0 6.6.4.6.1 1 0 1.3-.6.4-1 .8-2 1.3-3 .2-.4.2-.8-.1-1.1-3.2-4.2-6.7-8-11.4-10.4-.5-.3-.8-.6-.9-1.1-.3-1.4-.7-2.8-1.3-4.2-.3-.7-.6-1.3-1.4-1.7z"/></symbol><symbol id="icon-close" viewBox="0 0 18 18"><path d="M18 1.3L16.7 0 9 7.7 1.3 0 0 1.3 7.7 9 0 16.7 1.3 18 9 10.3l7.7 7.7 1.3-1.3L10.3 9z"/></symbol><symbol id="icon-fb-mobile" viewBox="0 0 10 19"><path d="M7.1 19H2v-8.8H0V5.8h1.9c-.1-2 .2-3.4 1.1-4.4C3.8.5 5 .1 6.5 0H10v4.2H7.2c-.1.2-.2.8-.2 1.6h3v4.4H7.1V19zm-4-1h2.8V9.1h2.9V6.8H5.9v-.5c0-1.4 0-2.6.7-3.1l.1-.1h2.1V1H6.5c-1.2.1-2 .4-2.6 1-.8.8-1 2.3-.8 4.2l.1.6H1.1v2.3h2V18z"/></symbol><symbol id="icon-gift" viewBox="0 0 55.5 60"><path d="M52.3 12.2h-7c.5-.7.8-1.4 1.1-2.2.6-2 .4-4.1-.6-5.9-1-1.8-2.6-3.1-4.6-3.7-2-.6-4.1-.4-5.9.6-3.6 2-6.2 6.1-7.6 9-1.4-2.9-4-7.1-7.6-9-3.8-2-8.5-.6-10.5 3.1-1.4 2.7-1.2 5.8.5 8.1h-7c-1.7 0-3.1 1.4-3.1 3.1v9.4c0 1.7 1.4 3.1 3.1 3.1H4v26.1c0 3.3 2.7 6 6 6h35.5c3.3 0 6-2.7 6-6V27.8h.8c1.7 0 3.1-1.4 3.1-3.1v-9.4c.1-1.7-1.3-3.1-3.1-3.1zM36.5 3c1.3-.7 2.7-.8 4.1-.4 1.3.4 2.4 1.3 3.1 2.6.7 1.3.8 2.7.4 4.1-.4 1.2-1.1 2.2-2.2 2.9H29.4C30.5 9.6 33 5 36.5 3zM11.7 5.2C13.2 2.6 16.4 1.6 19 3c3.5 1.9 6 6.6 7.1 9.1H13.5c-2.3-1.4-3.1-4.5-1.8-6.9zm14.8 22.6v13.7H6.4V27.8h20.1zM6.4 53.9v-10h20.2v13.7H10c-2 0-3.6-1.7-3.6-3.7zm39.1 3.7H28.9V43.9h20.2v10c0 2-1.6 3.7-3.6 3.7zm3.6-16.1H28.9V27.8h20.2v13.7zm4-16.8c0 .4-.3.7-.7.7H3.2c-.4 0-.7-.3-.7-.7v-9.4c0-.4.3-.7.7-.7h49.2c.4 0 .7.3.7.7v9.4z"/></symbol><symbol id="icon-insta-mobile" viewBox="0 0 16 16"><style>.st0{fill:#231f20}</style><path class="st0" d="M11.8 1C13.6 1 15 2.4 15 4.2v7.7c0 1.7-1.4 3.1-3.1 3.1H4.2C2.4 15 1 13.6 1 11.8V4.2C1 2.4 2.4 1 4.2 1h7.6m0-1H4.2C1.9 0 0 1.9 0 4.2v7.7C0 14.1 1.9 16 4.2 16h7.7c2.3 0 4.2-1.9 4.2-4.2V4.2C16 1.9 14.1 0 11.8 0z"/><path class="st0" d="M8 4.9c1.7 0 3.1 1.4 3.1 3.1 0 1.7-1.4 3.1-3.1 3.1-1.7 0-3.1-1.4-3.1-3.1 0-1.7 1.4-3.1 3.1-3.1m0-1C5.7 3.9 3.9 5.7 3.9 8s1.8 4.1 4.1 4.1 4.1-1.8 4.1-4.1S10.3 3.9 8 3.9z"/><circle class="st0" cx="12.3" cy="3.7" r=".9"/></symbol><symbol id="icon-logo-mobile" viewBox="0 0 33.3 37.6"><style>.st0{fill:#fdc305}.st1{fill:#f06351}</style><path class="st0" d="M6.1 20.7l.1-2.3c6.7-.9 13.4-1.4 20.2-1.3 0 .6 0 1.2-.1 1.8 0 0 2.9-1.3 6-1.8-2.4-6.3-8.5-10.8-15.6-10.8C8.4 6.3 1.5 12.4.2 20.4c2.2.1 5.9.3 5.9.3zM27.2 24.2c-1.2 1.3-1.4 1.2-1.4 3.5v9.2c4.5-3 7.4-8.1 7.4-13.9 0-1.1-.1-2.1-.3-3.1-1.7 1.1-4.7 3.2-5.7 4.3zM6.4 25.7s-3.8-1.4-5.2-1.8L0 23.6c.2 6 3.7 11.3 8.7 14L6.4 25.7z"/><path class="st1" d="M26.3 17.1C26.4 8.6 24.9.6 24.9.6s-.2-1.2-.9-.2c-.7 1.1-1.2 3.9-1.2 3.9-7.4-.4-12.8.3-12.8.3C9.2 2 7.9.8 7.2 1c-.7.3-.7 3.4-.7 3.4l-.4 14.1c6.7-1 13.5-1.4 20.2-1.4z"/><path d="M12.4 14c0-.1 1 .7 1.4.9.4.2.6.4.6.6 0 .2-.3.3-.6.3s-.9-.1-1-.3H14c.1.1-1.3-1-1.6-1.5zM19.9 14.1s-1 1.3-1.1 1.3c0 .1-.2.3.2.3s1.1-.2 1.2-.3c.1-.1.1-.2-.1-.2s-.7 0-1 .1l.8-1.2s.1-.1 0 0zM16.8 20.2s.8-.4 1.1-1c.3-.7 0-.9-.4-1-.5-.1-1.3 0-1.7.3-.4.4-.3.7-.1 1 .2.2.8.6 1.1.7z"/><path class="st1" d="M16.3 21.5s-.2.4-.5.6c-.2.2-.6.4-1 .4-.6 0-1.1-.2-1.5-.4-.2-.1-.4-.3-.5-.4-.2-.2-.4-.3-.4-.3s.7 4.1 2.6 4.7c1.8.6 2.1-.7 2.2-1.1 0-.3 0-2.1-.8-3.2.1-.4 0-.2-.1-.3z"/><g><path d="M14.7 22.6c-1.3 0-2.3-1.4-2.3-1.4V21h.2s1 1.3 2.1 1.3c.6 0 1.1-.3 1.6-1l.1-.2.1.2s.4.8 1 .8c.5 0 1.1-.4 1.6-1.3 0-.1.1-.1.2 0 .1 0 .1.1 0 .2-.6 1-1.3 1.4-1.9 1.4-.6 0-.9-.5-1.1-.8-.4.7-1 1-1.6 1z"/></g><path class="st1" d="M26.2 18.9s-2.5 2.2-5.1 5.2-5.2 4.9-5.2 4.9c-.2-.5-1.6-1.5-1.6-1.5s-3.1-2.1-5.2-3.8c-1.2-1-2.3-2.2-3.1-3-.3 0-1.1-.1-2-.1 4.7 7 12 8.8 12 8.8.9-.1 3.3-1.9 5.1-3.3 1.8-1.4 4.8-4.5 5.9-5.9.6-.7.9-1.4 1.1-2-1.1.4-1.9.7-1.9.7z"/></symbol><symbol id="icon-mail" viewBox="0 0 17 13"><path d="M15.6 11.6H1.4V5.8H0V13h17V5.8h-1.4v5.8zM0 0v2.3l8.5 7.1L17 2.3V0H0zm15.6 1.6L8.5 7.5 1.4 1.6v-.2h14.2v.2z"/></symbol><symbol id="icon-mobile-menu" viewBox="0 0 24 18"><path d="M0 16h24v2H0zM0 8h24v2H0zM0 0h24v2H0z"/></symbol><symbol id="icon-phone" viewBox="0 0 20 20"><path d="M17.9 9.4H9.4v1.2h8.5l-2.1 2.1.9.9 3.1-3.1c.2-.2.2-.6 0-.9l-3.1-3.1-.9.9 2.1 2zM8.1 19.4v-6.2c0-.3-.3-.6-.6-.6H3.1c0 .7.6 1.2 1.2 1.2h2.5v5H3.1c-1 .1-1.8-.7-1.9-1.7v-14c0-1 .8-1.8 1.7-1.8H6.8v5H4.4c-.7 0-1.2.6-1.2 1.2h4.4c.3 0 .6-.3.6-.6V.6C8.1.3 7.8 0 7.5 0H3.1C1.5-.1.1 1.2 0 2.9V16.8c-.1 1.7 1.2 3.1 2.9 3.1H7.5c.3.1.6-.2.6-.5z"/></symbol><symbol id="icon-plus-mobile" viewBox="0 0 30 30"><style>.st0{fill:#231f20}</style><path class="st0" d="M30 14H16V0h-2v14H0v2h14v14h2V16h14z"/></symbol><symbol id="icon-right-arrow-long" viewBox="0 0 24.2 11"><style>.st0{fill:#3f4242}</style><path class="st0" d="M17.6 0l6.6 5.5-6.6 5.5V6.6H0V4.4h17.6z"/></symbol><symbol id="icon-tick" viewBox="0 0 21.1 15.5"><path d="M20.1 0L7.7 13.3 1 6.1 0 7.2l7.6 8.2.1.1L21 1.2l.1-.1z"/></symbol><symbol id="icon-vk-mobile" viewBox="0 0 22 12"><path d="M17.6 12c-.3 0-.9-.1-1.5-.5-.5-.3-.9-.7-1.3-1.2-.3-.3-.9-.9-1.1-.9-.2.1-.4.7-.3 1.2 0 .1 0 .6-.3.9-.3.3-.8.4-.9.4h-1.4c-.7 0-3.2-.2-5.4-2.3C2.5 7.1.2 2.2.1 2 0 1.6-.1 1.2.2.9c.3-.3.8-.4 1-.4h3.1c.1 0 .4.1.7.3.3.2.4.5.5.6 0 0 .5 1.1 1.1 2 1 1.5 1.4 1.9 1.5 2 .1-.4.2-1.4.1-2.3 0-.4-.1-.8-.2-1-.1-.1-.3-.2-.5-.2l-.6-.5c0-.5.5-.9.9-1.1.5-.2 1.3-.3 2.3-.3h.5c.9 0 1.2.1 1.6.1 1.2.3 1.2 1.3 1.1 2.5v1.6c0 .3 0 .8.1 1 .2-.1.6-.5 1.5-1.9.6-.9 1-1.9 1.1-2.1.1-.3.4-.7 1.2-.7h3.4c.7 0 1.2.2 1.3.7.2.5.1 1.3-1.7 3.5-.3.3-.5.6-.7.9-.5.4-.9 1-.9 1.1 0 .1.5.5.9.9 1.1.9 1.9 1.7 2.2 2.3.4.6.3 1 .2 1.3-.3.7-1.2.7-1.4.8h-2.8-.1zm-3.9-3.7c.7 0 1.2.6 1.8 1.2.4.4.7.8 1.1 1 .5.3 1 .3 1 .3h2.9c.1 0 .3-.1.4-.1 0 0 0-.1-.1-.1-.3-.5-1-1.3-2-2.1-.9-.7-1.3-1.1-1.4-1.7 0-.6.4-1.1 1.2-2.1.2-.2.4-.5.7-.8 1.1-1.4 1.4-2 1.5-2.3H16.9c0 .4-.5 1.5-1.1 2.4-1.4 2.1-2 2.4-2.5 2.4-.1 0-.3 0-.4-.1-.7-.4-.7-1.4-.7-2.1v-.3-1.3c.1-1.3 0-1.3-.3-1.4-.3-.1-.5-.1-1.4-.1H10c-.5 0-1 0-1.4.1l.2.2c.4.5.4 1.5.4 1.7.1 1.3 0 2.9-.7 3.3-.1 0-.2.1-.4.1-.6 0-1.3-.7-2.5-2.5C5 2.9 4.5 1.8 4.5 1.8s0-.1-.1-.1-.2-.1-.2-.1H1.3h-.1c.4.9 2.5 5 4.8 7.2 2 1.9 4.3 2 4.7 2h1.4s.2 0 .2-.1v-.1c0-.2 0-2 1.2-2.3h.2z"/></symbol></svg>
     <header class="page-header">
         <nav class="main-nav">
             <div class="main-nav__wrapper">
-                <a href="#">cat-energy</a>
-                <button class="main-nav__toggler">menu</button>
+                <a href="#"><img class="main-nav__logo" src="img/icon-logo-mobile.svg" width="33" height="38"><img class="main-nav__name" src="img/logo-mobile-header.svg" width="101" height="18"></a>
+                <button class="main-nav__toggler"><svg width="24" height="19"><use xlink:href="#icon-mobile-menu" href="#icon-mobile-menu"></use></svg></button>
                 <ul class="main-nav__list">
                     <li class="main-nav__item"><a href=""></a></li>
                     <li class="main-nav__item"><a href=""></a></li>
@@ -21,59 +23,55 @@
         </nav>
     </header>
     <main>
-        <section class="program">
-            <div class="program__wrapper">
-                <button class="program__button">Подобрать программу</button>
+        <section class="promo"> 
+            <div class="promo__wrapper">
+                <h1>Функциональное питание для котов</h1>
+                <p>Занялся собой? Займись собой!</p>
+                <div class="promo__picture">
+                    <img class="promo__cup" src="img/index-can-mobile@1x.png">
+                </div>
+                <a href="form.html" class="promo__button">Подобрать программу</a>
             </div>
         </section>
-        <section class="slim">
-            <div class="slim__wrapper">
-                <div class="slim__header">
-                    <img src="" alt="">
-                    <h1>Похудение</h1>
-                </div>
-                <span class="slim__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</span>
-                <div class="slim__catalog">
-                    <span>Каталог slim</span>
-                    <a href="#"></a>
-                </div>
-            </div>
-        </section>
-        <section class="grow">
-            <div class="grow__wrapper">
-                <div class="grow__header">
-                    <img src="" alt="">
-                    <h1>Набор массы</h1>
-                </div>
-                <span class="grow__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</span>
-                <div class="grow__catalog">
-                    <span>Каталог Pro</span>
-                    <a href="#"></a>
-                </div>
+        <section class="programm">
+            <h2>Основные программы</h2>
+            <div class="programm__wrapper">
+                <ul class="programm__list">
+                    <li class="programm__item">
+                        <h3 class="programm__slim">Похудение</h3>
+                        <p class="programm__item-desc">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+                        <a href="catalog.html">Каталог slim<img src="img/right-arrow-verylong.png"></a>
+                    </li>
+                    <li class="programm__item">
+                        <h3 class="programm__fat">Набор массы</h3>
+                        <p class="programm__item-desc">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+                        <a href="catalog.html">Каталог pro<img src="img/right-arrow-verylong.png"></a>
+                    </li>
+                </ul>
             </div>
         </section>
         <section class="working">
             <div class="working__wrapper">
-                <h1>Как это работает</h1>
-                <ul class="working_list">
-                    <li class="working__item"><img src="" alt=""><span>Функциональное питание содержит только полезные питательные вещества.</span></li>
-                    <li class="working__item"><img src="" alt=""><span>Выпускается в виде порошка, который нужно залить кипятком и готова.</span></li>
-                    <li class="working__item"><img src="" alt=""><span>Замените один-два приема обычной еды на наше функциональное питание.</span></li>
-                    <li class="working__item"><img src="" alt=""><span>Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</span></li>
+                <h2>Как это работает</h2>
+                <ul class="working__list">
+                    <li class="working__item"><img src="img/advantage-leaf@1x.png" alt=""><span>Функциональное питание содержит только полезные питательные вещества.</span></li>
+                    <li class="working__item"><img src="img/advantage-powder@1x.png" alt=""><span>Выпускается в виде порошка, который нужно залить кипятком и готова.</span></li>
+                    <li class="working__item"><img src="img/advantage-dining@1x.png" alt=""><span>Замените один-два приема обычной еды на наше функциональное питание.</span></li>
+                    <li class="working__item"><img src="img/advantage-clock@1x.png" alt=""><span>Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</span></li>
                 </ul>
             </div>
         </section>
         <section class="example">
             <div class="example__wrapper">
-                <h1>Живой пример</h1>
+                <h1 class="example__title">Живой пример</h1>
                 <span class="example__description">Борис сбросил 5кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</span>
                 <div class="example__weight">
-                    <h1>5 КГ</h1>
-                    <span>снижение веса</span>
+                    <h2>5 КГ</h2>
+                    <p>снижение <span>веса</span></p>
                 </div>
                 <div class="example__days">
-                    <h1>60 дней</h1>
-                    <span>затрачено времени</span>
+                    <h2>60 дней</h2>
+                    <p>затрачено<span>времени</span></p>
                 </div>
                 <span class="example__value">затраты на питание: 15 000 руб.</span>
                 <img src="" alt="">
@@ -87,10 +85,11 @@
     <footer class="page-footer">
         <div class="page-footer__partner">
             <h2>приглашаем к сотрудничеству дилеров!</h2>
-            <span>ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</span>
+            <p>ул. Большая<br> Конюшенная, д. 19/8 <span>Санкт-Петербург</span></p>
         </div>
         <div class="page-footer__map">
-
+            <img src="img/map-mobile.png" class="page-footer__map-map" width="100%" height="362">
+            <img src="img/map-pin.png" class="page-footer__map-dot" width="45" height="52">
         </div>
         <div class="page-footer__cat">
             <span class="page-footer__span--bold">cat</span>
@@ -98,14 +97,22 @@
         </div>
         <div>
             <ul class="page-footer__social">
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>
+                    <a href="#"><svg class="page-footer__svg" width="22" height="12"><use xlink:href="#icon-vk-mobile" href="#icon-vk-mobile"></use></svg></a>
+                </li>
+                <li>
+                    <a href="#"><svg class="page-footer__svg" width="16" height="16"><use xlink:href="#icon-insta-mobile" href="#icon-insta-mobile"></use></svg></a>
+                </li>
+                <li>
+                    <a href="#"><svg class="page-footer__svg" width="10" height="19"><use xlink:href="#icon-fb-mobile" href="#icon-fb-mobile"></use></svg></a>
+                </li>
             </ul>
         </div>
-        <div>
+        <div class="page-footer__link">
             <span class="page-footer__htmlacademy">HTML Academy</span>
-            <a href="" class="page-footer__logo"></a>
+            <a href="" class="page-footer__logo">
+                <svg class="page-footer__svg--logo" width="27" height="34"><use xlink:href="#logo-footer" href="#logo-footer"></use></svg>
+            </a>
         </div>
     </footer>
 </body>
